fix text alignment error

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -17,3 +17,6 @@
   width: 100px;
   height: 40px;
 }
+.form-input {
+  text-align: left;
+}
